updated about link

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -69,7 +69,7 @@
 												<li><a href="#">Feugiat Veroeros</a></li>
 											</ul>
 										</li> -->
-										<li><a href="about.html">About</a></li>
+										<li><a href="/about">About</a></li>
 										<li><a href="#"> Contact Information </a></li>
 									</ul>
 								</nav>
