--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,12 @@
 {% include header.html %}
 
 <main>
-  {{ content }}
+	<section>
+			<header class="major">
+						<h2>Recent Posts</h2>
+        {{content}}
+			</header>
+  </section>
 </main>
+
 
