Edited default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,12 @@
 
 <main>
 	<section>
-			<header class="major">
-						<h2>Recent Posts</h2>
-        {{content}}
-			</header>
-  </section>
+		<header class="major">
+			<h2>Recent Posts</h2>
+        			{{content}}
+		</header>
+  	</section>
 </main>
+</body>
 
 
