--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,17 +44,7 @@ table {
   border-spacing: 0; }
 
 body {
-  font-size: $base-font-size;
-  line-height: 1.6;
-  margin: 0 auto;
-  max-width: 75rem;
-  padding: 3rem 3rem 0;
-
-  & > * {
-    margin-bottom: 2.4rem;
-  }
-
-}
+  -webkit-text-size-adjust: none; }
 
 h2.post-head {
   margin: unset;
