--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="index.html" class="logo"><strong>Physics, Math and Programming</strong> by QuantumOfVacuum</a>
+									<a href="/index.html" class="logo"><strong>Physics, Math and Programming</strong> by QuantumOfVacuum</a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -49,7 +49,7 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
+										<li><a href="/index.html">Homepage</a></li>
 										<li><a href="#">Physics Stuff</a></li>
 										<li><a href="#">Math Stuff</a></li>
 										<!-- <li>
@@ -61,7 +61,7 @@
 												<li><a href="#">Feugiat Veroeros</a></li>
 											</ul>
 										</li> -->
-										<li><a href="about.html">About</a></li>
+										<li><a href="/about">About</a></li>
 										<li><a href="#"> Contact Information </a></li>
 									</ul>
 								</nav>
