--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="/index.html" class="logo"><strong>Physics, Math and Programming</strong> by QuantumOfVacuum</a>
+									<a href="/" class="logo"><strong>Physics, Math and Programming</strong> by QuantumOfVacuum</a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
