--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -4,7 +4,7 @@
 <body class="is-preload">
 
 	<section>
-		<h2 class="post-head">{{post.title}}</h2>
+		<h2 class="post-head">{{ page.title }}</h2>
 		<p class="post-date">Published {{ page.date | date: "%B %d, %Y" }}</p>
 		{{content}}
 	</section>
