--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -4,6 +4,9 @@
 <body class="is-preload">
 
 	<section>
+		<header id="header">
+		<a href="/" class="logo"><strong>Physics, Math and Programming</strong> by QuantumOfVacuum</a>
+		</header>
 		<h2 class="post-head">{{ page.title }}</h2>
 		<p class="post-date">Published {{ page.date | date: "%B %d, %Y" }}</p>
 		{{content}}
