--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -5,7 +5,7 @@
 
 	<section>
 		<header id="header">
-		<a href="/" class="logo"><strong>Physics, Math and Programming</strong> by QuantumOfVacuum</a>
+		<a href="/" class="logo"><strong>Physics, Math , Programming and History</strong> by QuantumOfVacuum</a>
 		</header>
 		<h2 class="post-head">{{ page.title }}</h2>
 		<p class="post-date">Published {{ page.date | date: "%B %d, %Y" }}</p>
@@ -31,6 +31,7 @@
 										<li><a href="index.html">Homepage</a></li>
 										<li><a href="#">Physics Stuff</a></li>
 										<li><a href="#">Math Stuff</a></li>
+										<li><a href="#">History bits </a></li>
 										<!-- <li>
 											<span class="opener">Submenu</span>
 											<ul>
@@ -47,7 +48,7 @@
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">&copy; Untitled. All rights reserved. . Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 
 						</div>
