--- a/_includes/header2.html
+++ b/_includes/header2.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link href="/assets/styles/main.css" rel="stylesheet">
+	<link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
 
     <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"> </script>
 
