--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
 
 							<!-- Header -->
 								<header id="header">
-									<a href="/" class="logo"><strong>Physics, Math and Programming</strong> by QuantumOfVacuum</a>
+									<a href="/" class="logo"><strong>Physics, Math , Programming and History</strong> by QuantumOfVacuum</a>
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -52,6 +52,7 @@
 										<li><a href="/index.html">Homepage</a></li>
 										<li><a href="#">Physics Stuff</a></li>
 										<li><a href="#">Math Stuff</a></li>
+										<li><a href="#">History bits</a></li>
 										<!-- <li>
 											<span class="opener">Submenu</span>
 											<ul>
@@ -82,7 +83,7 @@
 
 							<!-- Footer -->
 								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. Demo Images: <a href="https://unsplash.com">Unsplash</a>. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+									<p class="copyright">&copy; Untitled. All rights reserved. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 								</footer>
 
 						</div>
