--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,8 +49,8 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="/index.html">Homepage</a></li>
-										<li><a href="/Physics_stuff.html">Physics Stuff</a></li>
+										<li><a href="index.html">Homepage</a></li>
+										<li><a href="Physics_stuff.html">Physics Stuff</a></li>
 										<li><a href="#">Math Stuff</a></li>
 										<li><a href="#">History bits</a></li>
 										<!-- <li>
