--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -28,20 +28,11 @@
 										<h2>Menu</h2>
 									</header>
 									<ul>
-										<li><a href="index.html">Homepage</a></li>
-										<li><a href="/Physics_stuff.html">Physics Stuff</a></li>
+										<li><a href="../index.html">Homepage</a></li>
+										<li><a href="../Physics_stuff.html">Physics Stuff</a></li>
 										<li><a href="#">Math Stuff</a></li>
 										<li><a href="#">History bits </a></li>
-										<!-- <li>
-											<span class="opener">Submenu</span>
-											<ul>
-												<li><a href="#">Lorem Dolor</a></li>
-												<li><a href="#">Ipsum Adipiscing</a></li>
-												<li><a href="#">Tempus Magna</a></li>
-												<li><a href="#">Feugiat Veroeros</a></li>
-											</ul>
-										</li> -->
-										<li><a href="about.html">About</a></li>
+										<li><a href="../about.markdown">About</a></li>
 										<li><a href="#"> Contact Information </a></li>
 									</ul>
 								</nav>
