--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
 									<ul>
 										<li><a href="/">Homepage</a></li>
 										<li><a href="/tag/Physics_stuff">Physics Stuff</a></li>
-										<li><a href="#">Math Stuff</a></li>
+										<li><a href="/tag/Math_stuff">Math Stuff</a></li>
 										<li><a href="#">History bits</a></li>
 										<li><a href="/about">About</a></li>
 										<li><a href="#"> Contact Information </a></li>
