--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -36,7 +36,7 @@
 									<ul>
 										<li><a href="/index.html">Homepage</a></li>
 										<li><a href="/tag/Physics_stuff">Physics Stuff</a></li>
-										<li><a href="#">Math Stuff</a></li>
+										<li><a href="/tag/Math_stuff">Math Stuff</a></li>
 										<li><a href="#">History bits </a></li>
 										<li><a href="/about">About</a></li>
 										<li><a href="#"> Contact Information </a></li>
