--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -94,8 +94,7 @@ code {
 
 blockquote {
   border-left: 0.5rem solid $offwhite;
-  border-right: 0.5rem solid $offwhite;
-  color: $gray;
+  color: $white;
   padding: .6rem 0 .6rem 1.8rem;
 
   cite {
