--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -93,7 +93,7 @@ code {
 
 
 blockquote {
-  border-left: 0.5rem solid $offwhite;
+  border-left: 0.1rem solid $black;
   color: $white;
   padding: .6rem 0 .6rem 1.8rem;
 
