--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -93,7 +93,8 @@ code {
 
 
 blockquote {
-  border-box:0.1rem solid $black
+  border-left:0.1rem solid $black
+  border-right:0.1rem solid $black
   color: $grey;
   padding: .6rem 0 .6rem 1.8rem;
 
