--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -93,8 +93,7 @@ code {
 
 
 blockquote {
-  border-left:0.1rem solid $black
-  border-right:0.1rem solid $black
+  border:0.1rem solid $black
   color: $grey;
   padding: .6rem 0 .6rem 1.8rem;
 
