--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -93,8 +93,7 @@ code {
 
 
 blockquote {
-  border:0.1rem solid $black
-  color: $grey;
+  color: $white;
   padding: .6rem 0 .6rem 1.8rem;
 
   cite {
@@ -104,6 +103,7 @@ blockquote {
     
     &::before {
       content: " — ";
+	  border:0.1rem solid $black
     }
   }
 }
