--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -95,6 +95,7 @@ code {
 blockquote {
   color: $white;
   padding: .6rem 0 .6rem 1.8rem;
+  text-align: center;
 
   cite {
     border-left: unset;
@@ -103,7 +104,7 @@ blockquote {
     
     &::before {
       content: " — ";
-	  border:0.1rem solid $black
+	  border:0.1rem solid $black;
     }
   }
 }
