--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -93,7 +93,11 @@ code {
 
 
 blockquote {
-  color: $white;
+  color: $grey;
+  border-left:0.1rem solid $black;
+  border-right:0.1rem solid $black;
+  border-top:0.1rem solid $black;
+  border-bottom:0.1rem solid $black;
   padding: .6rem 0 .6rem 1.8rem;
   text-align: center;
 
@@ -104,7 +108,6 @@ blockquote {
     
     &::before {
       content: " — ";
-	  border:0.1rem solid $black;
     }
   }
 }
