--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -93,13 +93,13 @@ code {
 
 
 blockquote {
-  color: $grey;
-  border-left:0.1rem solid $black;
-  border-right:0.1rem solid $black;
-  border-top:0.1rem solid $black;
-  border-bottom:0.1rem solid $black;
+  color: $black;
+  border-left: 0.2rem solid $black;
+  border-right: 0.2rem solid $black;
+  border-top: 0.2rem solid $black;
+  border-bottom: 0.2rem solid $black;
   padding: .6rem 0 .6rem 1.8rem;
-  text-align: center;
+  text-align: left;
 
   cite {
     border-left: unset;
