--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -98,13 +98,18 @@ blockquote {
   border-right: 0.2rem solid $black;
   border-top: 0.2rem solid $black;
   border-bottom: 0.2rem solid $black;
+  border-top-left-radius: 30px;
+  border-bottom-left-radius: 30px;
+  border-right: 4px solid #428bca;
+  border-top-right-radius: 30px;
+  border-bottom-right-radius: 30px;
   padding: .6rem 0 .6rem 1.8rem;
   text-align: left;
 
   cite {
     border-left: unset;
     display: block;
-    text-align: right;
+    text-align: left;
     
     &::before {
       content: " — ";
