--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -105,6 +105,7 @@ blockquote {
   border-bottom-right-radius: 30px;
   padding: .6rem 0 .6rem 1.8rem;
   text-align: left;
+  background: $grey;
 
   cite {
     border-left: unset;
