--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -26,6 +26,7 @@ html {
 
 body {
   font-size: $base-font-size;
+  background-color: #000;
   line-height: 1.6;
   margin: 0 auto;
   max-width: 75rem;
