--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -27,6 +27,7 @@ html {
 body {
   font-size: $base-font-size;
   background-color: #000;
+  color: #DBDBDB;
   line-height: 1.6;
   margin: 0 auto;
   max-width: 75rem;
