--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -95,18 +95,18 @@ code {
 
 
 blockquote {
-  color: $black;
-  border-left: 0.2rem solid $black;
-  border-right: 0.2rem solid $black;
-  border-top: 0.2rem solid $black;
-  border-bottom: 0.2rem solid $black;
+  color: $white;
+  border-left: 0.2rem solid $white;
+  border-right: 0.2rem solid $white;
+  border-top: 0.2rem solid $white;
+  border-bottom: 0.2rem solid $white;
   border-top-left-radius: 20px;
   border-bottom-left-radius: 20px;
   border-top-right-radius: 20px;
   border-bottom-right-radius: 20px;
   padding: .6rem 0 .6rem 1.8rem;
   text-align: left;
-  background: $offwhite;
+  background: #000;
 
   cite {
     border-left: unset;
