--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,8 +89,9 @@ html {
 *, *:before, *:after {
   box-sizing: inherit; }
 
+
 body {
-  background: #ffffff; }
+  background: #000; }
   body.is-preload *, body.is-preload *:before, body.is-preload *:after, body.is-resizing *, body.is-resizing *:before, body.is-resizing *:after {
     -moz-animation: none !important;
     -webkit-animation: none !important;
@@ -103,7 +104,7 @@ body {
 
 /* Type */
 body, input, select, textarea {
-  color: #7f888f;
+  color: #DBDBDB;
   font-family: "Open Sans", sans-serif;
   font-size: 13pt;
   font-weight: 400;
@@ -143,7 +144,7 @@ p {
   margin: 0 0 2em 0; }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #3d4449;
+  color: #DBDBDB;
   font-family: "Roboto Slab", serif;
   font-weight: 700;
   line-height: 1.5;
