--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2209,9 +2209,10 @@ button,
 #menu ul {
   -moz-user-select: none;
   -webkit-user-select: none;
+  background: #1d1e1f;
   -ms-user-select: none;
   user-select: none;
-  color: #3d4449;
+  color: #e3e4e6;
   font-family: "Roboto Slab", serif;
   font-weight: 400;
   letter-spacing: 0.075em;
