--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,9 +52,8 @@
 										<li><a href="/">Homepage</a></li>
 										<li><a href="/tag/Physics_stuff">Physics Stuff</a></li>
 										<li><a href="/tag/Math_stuff">Math Stuff</a></li>
-										<li><a href="#">History bits</a></li>
+										<li><a href="/tag/History-bits">History bits</a></li>
 										<li><a href="/about">About</a></li>
-										<li><a href="#"> Contact Information </a></li>
 									</ul>
 								</nav>
 
