--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -18,40 +18,21 @@
 		{{content}}
 	</section>
 
-	<!-- Sidebar -->
-		<div id="sidebar">
-			<div class="inner">
-				<!-- Search -->
-					<section id="search" class="alt">
-						<form method="post" action="#">
-							<input type="text" name="query" id="query" placeholder="Search" />
-						</form>
-					</section>
+	<!-- Post Footer -->
+	<div id="post-footer" class="post-footer"> 
+	<h3> ¿Tienes alguna pregunta o comentario? ¿Quieres escribir algún post? </h3>
+	<p>
+		Si tienes alguna sugerencia o quieres publicar alguno de tus post en este Blog, enviame un correo a <strong> <a href="mailto:quantumofvacuum.blog@gmail.com" target="_blank" rel="noopener"> esta dirección </a> </strong>
+	</p>
+	</div>
+	
+	<br>
+	
+	<!-- Footer -->
+		<footer id="footer">
+			<p class="copyright">&copy; Untitled. All rights reserved. . Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+		</footer>
 
-							<!-- Menu -->
-								<nav id="menu">
-									<header class="major">
-										<h2>Menu</h2>
-									</header>
-									<ul>
-										<li><a href="/index.html">Homepage</a></li>
-										<li><a href="/tag/Physics_stuff">Physics Stuff</a></li>
-										<li><a href="/tag/Math_stuff">Math Stuff</a></li>
-										<li><a href="#">History bits </a></li>
-										<li><a href="/about">About</a></li>
-										<li><a href="#"> Contact Information </a></li>
-									</ul>
-								</nav>
-
-							<!-- Footer -->
-								<footer id="footer">
-									<p class="copyright">&copy; Untitled. All rights reserved. . Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
-								</footer>
-
-						</div>
-					</div>
-
-			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
