--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -284,3 +284,10 @@ footer {
   font-size: 150%;
 }
 
+.post-footer {
+  margin-top: 40px;
+  border-right: 3px solid $white;
+  padding: .6rem 0 .6rem 1.8rem;
+  background: $grey;
+}
+
