--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -22,7 +22,7 @@
 	<div id="post-footer" class="post-footer"> 
 	<h3> ¿Tienes alguna pregunta o comentario? ¿Quieres escribir algún post? </h3>
 	<p>
-		Si tienes alguna sugerencia o quieres publicar alguno de tus post en este Blog, enviame un correo a <strong> <a href="mailto:quantumofvacuum.blog@gmail.com" target="_blank" rel="noopener"> esta dirección </a> </strong>
+		Si tienes alguna sugerencia o quieres publicar alguno de tus post en este Blog, envía un correo a <strong> <a href="mailto:quantumofvacuum.blog@gmail.com" target="_blank" rel="noopener"> esta dirección </a> </strong>
 	</p>
 	</div>
 	
