--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,8 @@
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
 								</header>
+								<br>
+								<h3> What I learn on the of becoming a theoretical physicist. </h3>
 
 
 							<!-- Section -->
@@ -50,9 +52,9 @@
 									</header>
 									<ul>
 										<li><a href="/">Homepage</a></li>
-										<li><a href="/tag/Physics_stuff">Physics Stuff</a></li>
-										<li><a href="/tag/Math_stuff">Math Stuff</a></li>
-										<li><a href="/tag/History-bits">History bits</a></li>
+										<li><a href="/tag/physics">Physics Stuff</a></li>
+										<li><a href="/tag/math">Math Stuff</a></li>
+										<li><a href="/tag/history-bits">History bits</a></li>
 										<li><a href="/about">About</a></li>
 									</ul>
 								</nav>
