--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,7 @@
 							<!-- Header -->
 								<header id="header">
 									<a href="/" class="logo"><strong>Physics, Math , Programming and History</strong> by QuantumOfVacuum</a>
+									
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -20,11 +21,12 @@
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
+									
 								</header>
 								<br>
 								<h3> What I learn on the of becoming a theoretical physicist. </h3>
 
-
+								<button onclick="switchThemes();">Click to Switch Themes</button>
 							<!-- Section -->
 								<section>
 									<header class="major">
