--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,7 @@
 									
 								</header>
 								<br>
-								<h3> What I learn on the of becoming a theoretical physicist. </h3>
+								<h3> What I learn on the way of becoming a theoretical physicist. </h3>
 
 								<button onclick="switchThemes();">Click to Switch Themes</button>
 							<!-- Section -->
