--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -56,7 +56,7 @@
 										<li><a href="/">Homepage</a></li>
 										<li><a href="/tag/physics">Physics Stuff</a></li>
 										<li><a href="/tag/math">Math Stuff</a></li>
-										<li><a href="/tag/history-bits">History bits</a></li>
+										<li><a href="/tag/History-bits">History bits</a></li>
 										<li><a href="/about">About</a></li>
 									</ul>
 								</nav>
