--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
 	<meta name="supported-color-schemes" content="light dark">
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-	<link id="theme" href="/assets/css/light.css" media="screen" rel="stylesheet" type="text/css" />
+	<link id="theme" href="/assets/css/dark.css" media="screen" rel="stylesheet" type="text/css" />
 	<link rel="stylesheet" href="assets/css/main.css" />
 	<link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
 	<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
