--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
 								<br>
 								<h3> What I learn on the way of becoming a theoretical physicist. </h3>
 
-								<button onclick="switchThemes();">Click to Switch Themes</button>
+								<!--<button onclick="switchThemes();">Click to Switch Themes</button> -->
 							<!-- Section -->
 								<section>
 									<header class="major">
