--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -6,8 +6,8 @@
 	<section>
 		<header id="header">
 		<a href="/" class="logo"><strong>Physics, Math , Programming and History</strong> by QuantumOfVacuum</a>
-		<button onclick="switchThemes();">Click to Switch Themes</button>
-		</header>
+		<!--<button onclick="switchThemes();">Click to Switch Themes</button>-->
+		</header> 
 		
 		<h2 class="post-head">{{ page.title }}</h2>
 		
@@ -25,14 +25,6 @@
 		
 		{{content}}
 	</section>
-
-	<!-- Post Footer -->
-	<div id="post-footer" class="post-footer"> 
-	<h3> ¿Tienes alguna pregunta o comentario? ¿Quieres escribir algún post? </h3>
-	<p>
-		Si tienes alguna sugerencia o quieres publicar alguno de tus post en este Blog, envía un correo a <strong> <a href="mailto:quantumofvacuum.blog@gmail.com" target="_blank" rel="noopener"> esta dirección </a> </strong>
-	</p>
-	</div>
 	
 	<br>
 	
