--- a/_layouts/default2.html
+++ b/_layouts/default2.html
@@ -2,10 +2,9 @@
 
 <main>
 <body class="is-preload">
-
 	<section>
 		<header id="header">
-		<a href="/" class="logo"><strong>Physics, Math , Programming and History</strong> by QuantumOfVacuum</a>
+		<a href="/" class="logo"><strong>{{site.title}}</strong> by {{site.github_username}}</a>
 		<!--<button onclick="switchThemes();">Click to Switch Themes</button>-->
 		</header> 
 		
@@ -19,7 +18,6 @@
 ]		</span>
 
 		<p class="post-date">Published {{ page.date | date: "%B %d, %Y" }}</p>
-		
 		
 		<br>
 		
