--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,17 +2,15 @@
 
 <main>
 <body class="is-preload">
-
 		<!-- Wrapper -->
 			<div id="wrapper">
 
 				<!-- Main -->
 					<div id="main">
 						<div class="inner">
-
 							<!-- Header -->
 								<header id="header">
-									<a href="/" class="logo"><strong>Physics, Math , Programming and History</strong> by QuantumOfVacuum</a>
+									<a href="/" class="logo"><strong>{{site.title}}</strong> by {{site.github_username}}</a>
 									
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -24,7 +22,7 @@
 									
 								</header>
 								<br>
-								<h3> What I learn on the way of becoming a theoretical physicist. </h3>
+								<h3> {{site.description}}. </h3>
 
 								<!--<button onclick="switchThemes();">Click to Switch Themes</button> -->
 							<!-- Section -->
@@ -39,13 +37,6 @@
 				<!-- Sidebar -->
 					<div id="sidebar">
 						<div class="inner">
-
-							<!-- Search -->
-								<section id="search" class="alt">
-									<form method="post" action="#">
-										<input type="text" name="query" id="query" placeholder="Search" />
-									</form>
-								</section>
 
 							<!-- Menu -->
 								<nav id="menu">
