--- a/_layouts/astrolog.html
+++ b/_layouts/astrolog.html
@@ -5,7 +5,7 @@
 
 	<section>
 		<header id="header">
-		<a href="/" class="logo"><strong>Physics, Math , Programming and History</strong> by QuantumOfVacuum</a>
+		<a href="/" class="logo"><strong>{{site.title}}</strong> by {{site.github_username}}</a>
 		</header>
 		<h2 class="post-head">Astrolog</h2>
 		{{content}}
