--- a/_includes/pdf.html
+++ b/_includes/pdf.html
@@ -1,5 +1,5 @@
 <p>
-  <object data="{{ include.url }}" width = "100%" type='application/pdf'>
+  <object data="{{ include.url }}" width = "100%" height = "500px" type='application/pdf'>
   </object>
 </p>
 
