--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,7 @@
 										<li><a href="/tag/physics">Physics Stuff</a></li>
 										<li><a href="/tag/math">Math Stuff</a></li>
 										<li><a href="/tag/History-bits">History bits</a></li>
+										<li><a href="/tag/Languages">Languages</a></li>
 										<li><a href="/astrolog"> Astrolog </a></li>
 										<li><a href="/about">About</a></li>
 									</ul>
