--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -47,7 +47,16 @@ blockquote, q {
 
 table {
   border-collapse: collapse;
-  border-spacing: 0; }
+  border-spacing: 0;
+  border:2px solid #ff0000  }
+ 
+th{
+	border:2px solid #000000;
+}
+
+td{
+	border:1px solid #000000;
+}
 
 body {
   -webkit-text-size-adjust: none; }
