--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -109,6 +109,18 @@ code {
   }
 }
 
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  border:2px solid #ffffff  }
+ 
+th{
+	border:2px solid #ffffff;
+}
+
+td{
+	border:1px solid #ffffff;
+}
 
 blockquote {
   color: var(--text-color);
