--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -122,6 +122,45 @@ td{
 	border:1px solid #ffffff;
 }
 
+table {
+  margin: 0 0 2em 0;
+  width: 100%;
+  border:2px solid #ffffff; }
+  table tbody tr {
+    border: solid 1px rgba(210, 215, 217, 0.75);
+    border-left: 0;
+    border-right: 0; }
+    table tbody tr:nth-child(2n + 1) {
+      background-color: rgba(230, 235, 237, 0.25); }
+  table td {
+    padding: 0.75em 0.75em;
+	border:1px solid #ffffff;	}
+  table th {
+    color: #ffffff;
+	border:2px solid #ffffff;
+    font-size: 0.9em;
+    font-weight: 600;
+    padding: 0 0.75em 0.75em 0.75em;
+    text-align: left; }
+  table thead {
+    border-bottom: solid 2px #ffffff; }
+  table tfoot {
+    border-top: solid 2px #ffffff; }
+  table.alt {
+    border-collapse: separate; }
+    table.alt tbody tr td {
+      border: solid 1px #ffffff;
+      border-left-width: 0;
+      border-top-width: 0; }
+      table.alt tbody tr td:first-child {
+        border-left-width: 1px; }
+    table.alt tbody tr:first-child td {
+      border-top-width: 1px; }
+    table.alt thead {
+      border-bottom: 0; }
+    table.alt tfoot {
+      border-top: 0; }
+
 blockquote {
   color: var(--text-color);
   border-left: 0.2rem solid var(--text-color);
@@ -321,6 +360,28 @@ footer {
   border-right: 3px solid $white;
   padding: .6rem 0 .6rem 1.8rem;
   background: $grey;
+}
+
+/* Scrollbar */
+
+/* width */
+::-webkit-scrollbar {
+  width: 15px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #121212;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #F23938;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #F22519;
 }
 
 /* Button */
