--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,7 +11,7 @@
 							<!-- Header -->
 								<header id="header">
 									<a href="/" class="logo"><strong>{{site.title}}</strong> by {{site.github_username}}</a>
-									
+
 									<ul class="icons">
 										<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 										<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -19,7 +19,7 @@
 										<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 										<li><a href="#" class="icon brands fa-medium-m"><span class="label">Medium</span></a></li>
 									</ul>
-									
+
 								</header>
 								<br>
 								<h3> {{site.description}}. </h3>
@@ -49,7 +49,8 @@
 										<li><a href="/tag/math">Math Stuff</a></li>
 										<li><a href="/tag/History-bits">History bits</a></li>
 										<li><a href="/tag/languages">Languages</a></li>
-										<li><a href="/astrolog"> Astrolog </a></li>
+										<li><a href="/oldpage"> Programming </a></li>
+										<li><a href="/goals">Goals</a></li>
 										<li><a href="/about">About</a></li>
 									</ul>
 								</nav>
@@ -74,6 +75,3 @@
 	</body>
 
 </main>
-
-
-
