--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 										<li><a href="/tag/History-bits">History bits</a></li>
 										<li><a href="/tag/languages">Languages</a></li>
 										<li><a href="/oldpage"> Programming </a></li>
-										<li><a href="/goals">Goals</a></li>
+										<!-- <li><a href="/goals">Goals</a></li> -->
 										<li><a href="/about">About</a></li>
 									</ul>
 								</nav>
